kubernetes/filippa/microblog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
    securityContext:
      runAsNonRoot: true
      runAsUser: 1000
      runAsGroup: 1000

      containers:
      - name: microblog
        image: iwinter78/microblog:master-prod
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  type: LoadBalancer
  selector:
    app: microblog
  ports:
    - port: 80
      targetPort: 5000
